--- a/package.json
+++ b/package.json
@@ -1,9 +1,29 @@
 {
-  "name": "sirocco",
-  "version": "1.0.0",
-  "description": "fusion of lit with tailwind. DRY development ",
-  "main": "index.ts",
+  "name": "sirocco-wc",
+  "version": "0.0.19",
+  "description": "Scaffolding Tool for the fusion of lit with tailwind. DRY development in the speed of light.",
   "author": "Thorsten Scherler",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "main": "./bin/main.js",
+  "bin":  {
+    "./bin/sirocco-wc": "./bin/main.js"
+  },
+  "exports": {
+    "sirocco-wc": "./bin/main.js"
+  },
+  "dependencies": {
+    "@caporal/core": "^2.0.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.12",
+    "chokidar": "^3.5.3",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "postcss": "^8.4.18",
+    "prompt": "^1.3.0",
+    "shelljs": "^0.8.5",
+    "tailwindcss": "^3.1.8"
+  }
 }
