--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.13",
     "chokidar": "^3.5.3",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.2",
+    "glob": "^8.0.3",
     "path": "^0.12.7",
     "postcss": "^8.4.18",
     "prompt": "^1.3.0",
