--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ yarn-error.log
 /test-results/
 /playwright-report/
 /playwright/.cache/
+
+# yarn 2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
