--- a/package.json
+++ b/package.json
@@ -23,23 +23,17 @@
   "description": "Scaffolding Tool for the fusion of lit with tailwind. DRY development in the speed of light with the zero configuration build tool parcel, playwright and jest testing. jenkinsCI ready.",
   "author": "Thorsten Scherler",
   "license": "MIT",
-  "private": false,
   "main": "./bin/main.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/scherler/sirocco-wc.git"
   },
-  "bin": {
-    "sirocco-wc": "./bin/main.js"
-  },
+  "bin": "./bin/main.js",
   "exports": {
     "sirocco-wc": "./bin/main.js"
   },
   "overrides": {
     "lodash": "^4.17.21"
-  },
-  "resolutions": {
-    "**/lodash": "^4.17.21"
   },
   "dependencies": {
     "@caporal/core": "^2.0.2",
@@ -54,6 +48,7 @@
     "postcss": "^8.4.18",
     "prompt": "^1.3.0",
     "shelljs": "^0.8.5",
-    "tailwindcss": "^3.1.8"
-  }
+    "tailwindcss": "^3.2.1"
+  },
+  "packageManager": "yarn@3.2.4"
 }
