[yarn2] add lock
Signed-off-by: Thorsten Scherler <scherler@gmail.com>

--- a/bin/template/.gitignore
+++ b/bin/template/.gitignore
@@ -27,3 +27,11 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+# yarn2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
