--- a/bin/template/package.json
+++ b/bin/template/package.json
@@ -54,6 +54,11 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-lit": "^1.6.1",
+    "eslint-plugin-lit-a11y": "^2.3.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
     "glob": "^8.0.3",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
@@ -109,7 +114,7 @@
     "arrowParens": "avoid"
   },
   "lint-staged": {
-    "src/main/ts/**/*.ts": [
+    "[MAIN]/**/*.ts": [
       "eslint --fix",
       "prettier --write"
     ]
