--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sirocco-wc",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "keywords": [
     "sirocco",
     "wc",
@@ -40,6 +40,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "chokidar": "^3.5.3",
     "fs": "0.0.2",
