--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sirocco-wc",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "keywords": [
     "sirocco",
     "wc",
@@ -45,6 +45,7 @@
     "chokidar": "^3.5.3",
     "fs": "0.0.2",
     "glob": "^8.0.3",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "postcss": "^8.4.18",
     "prompt": "^1.3.0",
@@ -52,5 +53,8 @@
     "strip-comments": "^2.0.1",
     "tailwindcss": "^3.2.1"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "devDependencies": {
+    "@types/lodash": "^4"
+  }
 }
